--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "eslint": "^6.6.0",
+    "@types/three": "^0.103.2",
     "three": "^0.109.0",
-    "three-trackballcontrols": "0.0.8"
+    "three-trackballcontrols": "0.0.8",
+    "types": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
