Fix VS Code Three.js autocomplete

--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@types/three": "^0.103.2",
-    "three": "^0.109.0",
-    "three-trackballcontrols": "0.0.8",
-    "types": "^0.1.1"
+    "three": "^0.109.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
