--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ typings/
 
 # Optional eslint cache & rules
 .eslintcache
-.eslintrc.js
+.eslintrc.*
 
 # Optional REPL history
 .node_repl_history
