--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ typings/
 # Optional Visual Studio Code files
 .vscode
 jsconfig.json
+
+# Optional node package metadata
+package.json
+package-lock.json
